// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TrackingDomainRow Tag component should render the IsDefaultTag 1`] = `
<Tag
  className="Tag"
  color="orange"
>
  Default
</Tag>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a "currently verifying" domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="unverified"
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Verifying...",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a blocked domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="blocked"
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": false,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a default unverified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="unverified"
          />
          <IsDefaultTag />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Remove Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
          <span>
            <br />
            <strong>
              Note: Deleting this domain will remove it as default, as well.
            </strong>
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Remove Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will no longer use somedomain.com. Instead, they will use the system default until another default is selected.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Remove default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a default verified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <IsDefaultTag />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Remove Default",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": false,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
          <span>
            <br />
            <strong>
              Note: Deleting this domain will remove it as default, as well.
            </strong>
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Remove Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will no longer use somedomain.com. Instead, they will use the system default until another default is selected.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Remove default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a non-default unverified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="unverified"
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a non-default verified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        />
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": false,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to master account should render a pending domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="pending"
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": false,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a "currently verifying" domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="unverified"
          />
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={false}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Verifying...",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a blocked domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="blocked"
          />
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={false}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": false,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a default unverified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="unverified"
          />
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={true}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Remove Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
          <span>
            <br />
            <strong>
              Note: Deleting this domain will remove it as default, as well.
            </strong>
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Remove Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will no longer use somedomain.com. Instead, they will use the system default until another default is selected.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Remove default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a default verified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={true}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Remove Default",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": false,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
          <span>
            <br />
            <strong>
              Note: Deleting this domain will remove it as default, as well.
            </strong>
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Remove Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will no longer use somedomain.com. Instead, they will use the system default until another default is selected.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Remove default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a non-default unverified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="unverified"
          />
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={false}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a non-default verified domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={false}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": false,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": true,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;

exports[`Component: TrackingDomainRow rendering when assigned to subaccount should render a pending domain 1`] = `
<Fragment>
  <Panel.Section>
    <Grid>
      <Grid.Column
        md={8}
        xs={12}
      >
        <span
          className="DomainHeading"
        >
          somedomain.com
        </span>
        <div
          className="TagRow"
        >
          <DomainStatusTag
            className="Tag"
            status="pending"
          />
          <Subaccount
            all={false}
            className="Tag"
            id={100}
            isDefault={false}
            master={false}
            receiveAll={false}
          />
        </div>
      </Grid.Column>
      <Grid.Column
        md={4}
        xs={12}
      >
        <ActionPopover
          actions={
            Array [
              Object {
                "content": "Set as Default",
                "onClick": [Function],
                "visible": undefined,
              },
              Object {
                "content": "Retry Verification",
                "onClick": [Function],
                "visible": true,
              },
              Object {
                "content": "Delete",
                "onClick": [Function],
                "visible": false,
              },
            ]
          }
        />
      </Grid.Column>
    </Grid>
  </Panel.Section>
  <div>
    <DeleteModal
      content={
        <p>
          <span>
            Any templates or transmissions that use this tracking domain directly will fail.
          </span>
        </p>
      }
      onCancel={[Function]}
      onDelete={[Function]}
      open={false}
      title="Permanently delete somedomain.com?"
    />
    <ConfirmationModal
      confirmVerb="Set as Default"
      content={
        <p>
          Transmissions and templates that don't specify a tracking domain will now use somedomain.com.
        </p>
      }
      onCancel={[Function]}
      onConfirm={[Function]}
      open={false}
      title="Set default tracking domain (somedomain.com)"
    />
  </div>
</Fragment>
`;
